--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "bulma": "^0.9.3",
     "ethers": "^5.5.1",
     "next": "12.0.4",
